# Clothing-Store

./: .gitmodules  CMakeLists.txt  CustomButton.qml  DatabaseConnection.cpp  DatabaseConnection.h  EmployeeEdit.qml  EmployeeSearch.qml  Employees.cpp  Employees.h  Employees.qml  EmployeesDelegate.qml  Login.qml  Main.qml  MainApplication.qml  README.md  Style.qml  main.cpp
Custom/: ConfirmDialog.qml  CustomButton.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomEditingDialog.qml  CustomInputBox.qml  CustomRadioButton.qml  CustomSpinBox.qml  InfoDialog.qml  Style.qml  ThemeSwitch.qml
EmployeesTab/: EmployeeAdd.qml  EmployeeEdit.qml  EmployeeSearch.qml  Employees.cpp  Employees.h  Employees.qml  EmployeesDelegate.qml
HomeTab/: Home.qml  LogData.cpp  LogData.h  TodoListDelegate.qml  TodoListModel.cpp  TodoListModel.h
Init/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseController.cpp  DatabaseController.h  ForgotPassDialog.qml  Login.qml  Signup.qml
StorageTab/: ClothesDelegate.qml  ClothesModel.cpp  ClothesModel.h  ClothesTypes.qml  ClothesTypesAdd.qml  ClothesTypesDelegate.qml  ClothesTypesEditingDialog.qml  ClothesTypesModel.cpp  ClothesTypesModel.h  Clothing.cpp  Clothing.h  SizeAdd.qml  Sizes.qml  SizesDelegate.qml  SizesModel.cpp  SizesModel.h  Storage.qml  StorageDelegate.qml  StorageTabInfoText.qml
StorageTab/Clothes/: Clothes.qml  ClothesDelegate.qml  ClothesItemAdd.qml  ClothesModel.cpp  ClothesModel.h
StorageTab/ClothesTypes/: ClothesTypes.qml  ClothesTypesAdd.qml  ClothesTypesDelegate.qml  ClothesTypesEditingDialog.qml  ClothesTypesModel.cpp  ClothesTypesModel.h  SizesModel.cpp  SizesModel.h
StorageTab/ClothingItem/: AddSize.qml  ClothesSizesModel.cpp  ClothesSizesModel.h  ClothingItem.qml  ClothingSizeAdd.qml  SizesComboBox.qml
